--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Pocahontas, -1617'
 - !lcc 'E011'
+- GITenberg
 title: The Princess Pocahontas
 url: http://www.gutenberg.org/ebooks/16458
